--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   },
   "dependencies": {
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "mongodb": "^3.2.3",
+    "mongoose": "^5.5.6",
+    "passport": "^0.4.0",
+    "plaid": "^3.1.1"
   }
 }
