--- a/package.json
+++ b/package.json
@@ -20,11 +20,17 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "express": "^4.16.3",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "express": "^4.16.4",
     "if-env": "^1.0.4",
+    "is-empty": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.3",
     "mongoose": "^5.5.6",
     "passport": "^0.4.0",
-    "plaid": "^3.1.1"
+    "passport-jwt": "^4.0.0",
+    "plaid": "^3.1.1",
+    "validator": "^10.11.0"
   }
 }
