--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "if-env": "^1.0.4",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongodb": "^3.2.3",
     "mongoose": "^5.5.6",
     "passport": "^0.4.0",
