--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,11 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "jwt-decode": "^2.2.0",
+    "material-table": "^1.36.1",
+    "prop-types": "^15.7.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-plaid-link-button": "0.0.4",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.1",
@@ -21,6 +24,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  
   "browserslist": [
     ">0.2%",
     "not dead",
